--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,11 +13,23 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: install jo
+      run: apt install jo -y
+
     - name: npm install
       run: npm install
 
     - name: Package
       run: npx pkg node_modules/svgo
+
+    - name: Create JSON
+      run: jo -p version=$(./svgo-macos -v) \
+           mac_sha256=$(sha256sum ./svgo-macos | head -c 64) \
+           mac_size=$(wc -c < ./svgo-macos | xargs) \
+           linux_sha256=$(sha256sum ./svgo-linux | head -c 64) \
+           linux_size=$(wc -c < ./svgo-linux | xargs) \
+           windows_sha256=$(sha256sum svgo-win.exe | head -c 64) \
+           windows_size=$(wc -c < ./svgo-win.exe | xargs)
       
     - uses: actions/upload-artifact@v1
       with:
