--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: install jo
-      run: apt install jo -y
+      run: sudo apt install jo -y
 
     - name: npm install
       run: npm install
